[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hello_world"
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.3.1"
borsh-derive = "1.3.1"
solana-program = "1.18.1"

[dev-dependencies]
solana-program-test = "1.18.1"
solana-sdk = "1.18.1"